--- a/pkg/llmfactory/testdata/llm.yaml
+++ b/pkg/llmfactory/testdata/llm.yaml
@@ -1,8 +1,8 @@
 ---
-default_provider: openai-dev
+default_provider: OPEN_AI
 providers:
   # the first provider is the default one if default_provider is not set
-  - name: openai-dev
+  - name: OPEN_AI
     token: env://OPENAI_API_KEY
     default_model: gpt-4o
     available_models:
@@ -12,7 +12,8 @@ providers:
     open_ai:
       # OPEN_AI|AZURE|ANTHROPIC|CLOUDFLARE_AZURE
       api_type: OPEN_AI
-  - name: azure-test
+
+  - name: AZURE
     default_model: gpt-41
     available_models:
       - gpt-41
@@ -23,6 +24,40 @@ providers:
       api_version: 2024-08-01-preview
       org_id: 1234567890
       assistant_version: 2024-08-01-preview
+
+
+  - name: ANTHROPIC
+    token: env://ANTHROPIC_TOKEN
+    default_model: claude-sonnet-4-20250514
+    available_models:
+      - claude-sonnet-4-20250514
+    open_ai:
+      api_type: ANTHROPIC
+
+  - name: BEDROCK
+    default_model: anthropic.claude-3-5-sonnet-20241022-v2:0
+    available_models:
+      - anthropic.claude-3-5-sonnet-20241022-v2:0
+    open_ai:
+      api_type: BEDROCK
+
+  - name: PERPLEXITY
+    token: env://PERPLEXITY_TOKEN
+    default_model: sonar
+    available_models:
+      - sonar
+    open_ai:
+      base_url: https://api.perplexity.ai
+      api_type: PERPLEXITY
+
+  - name: GOOGLEAI
+    token: env://GOOGLEAI_TOKEN
+    default_model: gemini-2.5-flash-preview-05-20
+    available_models:
+      - gemini-2.5-flash-preview-05-20
+    open_ai:
+      api_type: GOOGLEAI
+
 tool_models:
   default:
     - gpt-4o
